[package]
name = "game-of-life-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3
strip = true

# Enable no amount of optimization in debug mode
[profile.dev]
opt-level = 0

[profile.release]
strip = true
lto = "fat"

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
# bevy = "0.12.0"
bevy_panorbit_camera = "0.9.0"
poem = "1"
poem-openapi = { version = "2", features = ["swagger-ui"]}
minreq = { version = "2.11.0", features = ["punycode"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
